objects/Invoice_HD__c.object
<CustomObject>
    <fields>
        <fullName>Account_SL__c</fullName>
        <formula>Program_Package_HD__r.Account__r.r_Account_SL__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Invoice_Amount_HD__c</fullName>
        <label>Actual Gross Invoice Amount (HD)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Invoice_Date_HD__c</fullName>
        <label>Actual Invoice Date (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Delta_HD__c</fullName>
        <formula>Scheduled_Gross_Invoice_Amount_HD__c - Actual_Gross_Invoice_Amount_HD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Delta (HD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Note_HD__c</fullName>
        <label>Invoice Note (HD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Received_HD__c</fullName>
        <description>Accounts Receivable field: For noting the exact date of the Last/Most Recent Date that a client has made a payment to this specific invoice.</description>
        <inlineHelpText>Accounts Receivable field: For noting the exact date of the Last/Most Recent Date that a client has made a payment to this specific invoice.</inlineHelpText>
        <label>Last Payment Received (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_Due_HD__c</fullName>
        <description>Accounts Receivable field: For noting the Outstanding balance for this specific invoice - subtract payment made from &apos;Actual Gross Invoice Amount&apos; field.</description>
        <inlineHelpText>Accounts Receivable field: Subtract the payment made for this SPECIFIC invoice# from &apos;Actual Gross Invoice Amount&apos; field to reflect &apos;Outstanding Balance Due&apos;</inlineHelpText>
        <label>Outstanding Balance Due (HD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Package_HD__c</fullName>
        <label>Program Package (Hardwick Day)</label>
        <referenceTo>Program_Package_Hardwick_Day__c</referenceTo>
        <relationshipName>Program_Packages_Invoice_Detail_HD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Gross_Invoice_Amount_HD__c</fullName>
        <label>Scheduled Gross Invoice Amount (HD)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Invoice_Date_HD__c</fullName>
        <label>Scheduled Invoice Date (HD)</label>
        <type>Date</type>
    </fields>
    <label>Invoice (HD)</label>
    <nameField>
        <displayFormat>{0}-HD</displayFormat>
        <label>SF Invoice Id (HD)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices (HD)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>